--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "consolidate": "^0.16.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
     "fs": "^0.0.1-security",
     "handlebars": "^4.7.7",
